[package]
name = "dy-export"
version = "1.0.0"
authors = ["Chanjung Kim <freiyer.paxbun@gmail.com>"]
edition = "2018"
description = "Define DLL functions using paxbun/dy-rust easily"
repository = "https://github.com/paxbun/dy-export"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.36", features = [ "full" ] }
quote = "1.0"
proc-macro2 = "1.0"